--- a/index.html
+++ b/index.html
@@ -175,7 +175,14 @@
                 <div class="container">
                     <div class="memeComunity__wrapper">
                         <div class="memeComunity__left">
-                            
+                            <h3 class="memeComunity__left-title">Join the Trump Meme Community!</h3>
+                            <div class="memeComunity__left-box">
+                                <div class="memeComunity__left-subtitle">Mission</div>
+                                <div class="memeComunity__left-descr">This is YOUR chance to join a community that’s all about fighting for what matters. The TRUMP Meme encourages a culture of success & optimism to make the world a better place. Go TRUMP! 👊</div>
+                            </div>
+                        </div>
+                        <div class="memeComunity__right">
+                            <img src="images/T-Fight-Figure-3_1T-Fight-Figure-3.webp" alt="figure">
                         </div>
                     </div>
                 </div>
